<resources>
    <string name="app_name">Characters</string>
    
    <string name="last_location_hint">Last known location:</string>
    <string name="first_location_hint">First seen in:</string>

    <string name="character_creation_screen_title">Create new character</string>

    <string name="input_char_name_hint">Enter character\'s name</string>
    <string name="input_char_status_hint">Enter character\'s status (eg. Dead/Alive)</string>
    <string name="input_char_location_hint">Enter character\'s last known location</string>
    <string name="input_char_origin_hint">Where was the character first seen in?</string>
    <string name="erroneous_input_hint_indicator">Oopsie Woopsie!</string>
    <string name="add_character_button_caption">Save &amp; Exit</string>
</resources>
