<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.peye.characters.ui.charcreation.CharacterCreationViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_standard" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_standard" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:hint="@string/input_char_name_hint"
            app:errorEnabled="true"
            app:errorMessage="@{@string/erroneous_input_hint_indicator}"
            app:errorMessageShown="@{viewModel.nameInputErroneous}"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@={viewModel.nameInput}"
                android:textSize="@dimen/text_large" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/status_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/input_char_status_hint"
            app:errorEnabled="true"
            app:errorMessage="@{@string/erroneous_input_hint_indicator}"
            app:errorMessageShown="@{viewModel.statusInputErroneous}"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintTop_toBottomOf="@id/name_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@={viewModel.statusInput}"
                android:textSize="@dimen/text_large" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/input_char_location_hint"
            app:errorEnabled="true"
            app:errorMessage="@{@string/erroneous_input_hint_indicator}"
            app:errorMessageShown="@{viewModel.locationInputErroneous}"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintTop_toBottomOf="@id/status_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@={viewModel.locationInput}"
                android:textSize="@dimen/text_large" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/origin_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/input_char_origin_hint"
            app:errorEnabled="true"
            app:errorMessage="@{@string/erroneous_input_hint_indicator}"
            app:errorMessageShown="@{viewModel.originInputErroneous}"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintTop_toBottomOf="@id/location_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@={viewModel.originInput}"
                android:textSize="@dimen/text_large" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_and_exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:enabled="@{!viewModel.saving}"
            android:onClick="@{() -> viewModel.onSaveAndExitClicked()}"
            android:text="@string/add_character_button_caption"
            android:textSize="@dimen/text_standard"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintTop_toBottomOf="@id/origin_input_layout"
            tools:enabled="false" />

        <ProgressBar
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:indeterminate="true"
            android:padding="@dimen/margin_small"
            app:layout_constraintBottom_toBottomOf="@id/save_and_exit_button"
            app:layout_constraintEnd_toEndOf="@id/save_and_exit_button"
            app:layout_constraintStart_toStartOf="@id/save_and_exit_button"
            app:layout_constraintTop_toTopOf="@id/save_and_exit_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
